--- a/app/src/main/res/layout/activity_invite_friends_screen.xml
+++ b/app/src/main/res/layout/activity_invite_friends_screen.xml
@@ -89,7 +89,7 @@
                     android:layout_gravity="center"
 
                     android:scaleType="centerCrop"
-                    android:src="@drawable/whatsapp_icons"
+                    android:src="@drawable/whatsapp"
                     app:layout_collapseMode="parallax"/>
 
 
