--- a/app/src/main/res/drawable/interest_selection.xml
+++ b/app/src/main/res/drawable/interest_selection.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item  android:state_activated="true"
+    <item
+        android:state_activated="true"
         android:drawable="@drawable/selected_item_background"/>
     <item android:drawable="@drawable/grid_item_background" />
 </selector>
