--- a/app/src/main/res/layout/active_fragement_adapter.xml
+++ b/app/src/main/res/layout/active_fragement_adapter.xml
@@ -3,6 +3,7 @@
     android:layout_height="170dp"
     android:orientation="horizontal"
     android:layout_margin="10dp"
+    android:id="@+id/layout_main"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
 
