--- a/app/src/main/res/layout/activity_influencer_program_detail_screen.xml
+++ b/app/src/main/res/layout/activity_influencer_program_detail_screen.xml
@@ -31,6 +31,18 @@
                 android:fitsSystemWindows="true"
                 app:layout_collapseMode="parallax"/>
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:textSize="24dp"
+                android:gravity="center"
+                android:id="@+id/goal_name"
+                android:layout_gravity="center"
+                android:textColor="#FFFFFF"
+                android:text=""
+                />
+
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
@@ -103,6 +115,8 @@
                     android:layout_width="match_parent"
                     android:layout_marginTop="5px"
                     android:textSize="12sp"
+                    android:id="@+id/goals_tc"
+                    android:maxLines="2"
                     android:text="* Offer only valid on Mobile"
                     android:layout_height="wrap_content" />
 
@@ -129,6 +143,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:visibility="gone"
                 android:orientation="vertical"
                 android:layout_margin="7dp">
 
