--- a/app/src/main/res/layout/adapter_content_lists_design.xml
+++ b/app/src/main/res/layout/adapter_content_lists_design.xml
@@ -88,6 +88,16 @@
                     android:id="@+id/follow_profile"
                     android:textColor="#dd3e3e"/>
 
+                <ImageView
+                    android:id="@+id/more_icons"
+                    android:layout_width="50px"
+                    android:layout_height="50px"
+                    android:layout_gravity="center"
+                    android:src="@drawable/more"
+                    android:scaleType="centerCrop"
+
+                    />
+
             </LinearLayout>
 
 
@@ -125,26 +135,28 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="80dp"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:weightSum="4"
+                android:layout_height="60dp"
+                android:padding="10dp"
+                android:layout_gravity="center"
+                android:gravity="center"
                 android:orientation="horizontal">
 
                 <LinearLayout
 
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="2dp"
+
+                    android:layout_weight="1"
                     android:orientation="vertical"
 
                     >
 
                 <ImageView
                     android:id="@+id/whatsapp_share"
-                    android:layout_width="100px"
-                    android:layout_height="100px"
-                    android:src="@drawable/whatsapp_icon"
+                    android:layout_width="50px"
+                    android:layout_height="50px"
+                    android:layout_gravity="center"
+                    android:src="@drawable/whatsapp_icons"
                     android:scaleType="centerCrop"
 
                     />
@@ -154,21 +166,21 @@
 
                 <LinearLayout
 
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="2dp"
-                    android:layout_marginLeft="5dp"
+
+                    android:layout_weight="1"
+
                     android:orientation="vertical"
 
                     >
 
                     <ImageView
                         android:id="@+id/likes_image"
-                        android:layout_width="100px"
-                        android:layout_height="100px"
-                        android:clickable="true"
+                        android:layout_width="50px"
+                        android:layout_height="50px"
                         android:layout_gravity="center"
-                        android:src="@drawable/like_icon"
+                        android:src="@drawable/non_like"
                         android:scaleType="centerCrop"
 
                         />
@@ -200,20 +212,22 @@
 
                 <LinearLayout
 
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="2dp"
-                    android:layout_marginLeft="5dp"
+
+                    android:layout_weight="1"
+
                     android:orientation="vertical"
 
                     >
 
                     <ImageView
                         android:id="@+id/unlikes_image"
-                        android:layout_width="100px"
-                        android:layout_height="100px"
+                        android:layout_width="40px"
+                        android:layout_height="40px"
                         android:layout_gravity="center"
-                        android:src="@drawable/unlike_icon"
+                        android:layout_marginTop="2dp"
+                        android:src="@drawable/unlike_icons"
                         android:scaleType="centerCrop"
 
                         />
@@ -225,6 +239,7 @@
                         android:text="0"
                         android:gravity="center"
                         android:drawablePadding="2dp"
+
                         android:textColor="@color/black"
                         android:textSize="12dp"
                         android:layout_gravity="center"
@@ -243,20 +258,20 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="2dp"
-                    android:layout_marginLeft="5dp"
+
+                    android:layout_weight="1"
                     android:orientation="vertical"
 
                     >
 
                     <ImageView
                         android:id="@+id/comments_image"
-                        android:layout_width="100px"
-                        android:layout_height="100px"
-
-                        android:src="@drawable/comments_icon"
+                        android:layout_width="50px"
+                        android:layout_height="50px"
+                        android:layout_gravity="center"
+                        android:src="@drawable/comments_iconed"
                         android:scaleType="centerCrop"
 
                         />
@@ -272,6 +287,50 @@
                         android:textSize="12dp"
                         android:layout_gravity="center"
                         />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+
+                    >
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+
+                    >
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+
+                    >
+
+                    <ImageView
+                        android:id="@+id/share_image"
+                        android:layout_width="50px"
+                        android:layout_height="50px"
+                        android:layout_gravity="center"
+                        android:src="@drawable/share_icons"
+                        android:scaleType="centerCrop"
+
+                        />
+
+
                 </LinearLayout>
 
 
@@ -317,12 +376,70 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="13dp"
-                        android:maxLines="3"
+                        android:maxLines="2"
                         android:ellipsize="end"
                         android:textSize="16dp"
                         android:textColor="@color/listsub1"
                         android:lineSpacingExtra="3dp"
                         />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="right"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/read_more"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:visibility="gone"
+                            android:layout_below="@+id/activity_about"
+                            android:layout_marginRight="10dp"
+                            android:clickable="true"
+                            android:text="Read More"
+                            android:textColor="@color/colorPrimaryDark"
+                            android:textSize="14sp" />
+
+                        <TextView
+                            android:id="@+id/read_more_extend_line"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:visibility="gone"
+                            android:layout_below="@+id/activity_about"
+                            android:layout_marginRight="10dp"
+                            android:clickable="true"
+                            android:text="Read More"
+                            android:textColor="@color/colorPrimaryDark"
+                            android:textSize="14sp" />
+
+                        <TextView
+                            android:id="@+id/read_more_extend"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:visibility="gone"
+                            android:layout_below="@+id/activity_about"
+                            android:layout_marginRight="10dp"
+                            android:clickable="true"
+                            android:text="Read More"
+                            android:textColor="@color/colorPrimaryDark"
+                            android:textSize="14sp" />
+
+
+                        <TextView
+                            android:id="@+id/read_less"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentRight="true"
+                            android:layout_below="@+id/activity_about"
+                            android:layout_marginRight="10dp"
+                            android:clickable="true"
+                            android:text="Read Less"
+                            android:textColor="@color/colorPrimaryDark"
+                            android:textSize="14sp"
+                            android:visibility="gone" />
+
+                    </LinearLayout>
 
                 </LinearLayout>
 
