--- a/app/src/main/res/layout/earn_money_popup.xml
+++ b/app/src/main/res/layout/earn_money_popup.xml
@@ -24,11 +24,12 @@
 
             <TextView
                 android:id="@+id/signin_popupclose_txt"
-                android:layout_width="30dp"
+                android:layout_width="35dp"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:textColor="@color/white"
                 android:text="X"
+                android:textSize="24dp"
                 android:textStyle="bold"
                 android:layout_gravity="end"
                 android:gravity="center" />
