--- a/app/src/main/res/layout/interest_gridview_layout.xml
+++ b/app/src/main/res/layout/interest_gridview_layout.xml
@@ -9,7 +9,7 @@
     >
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         android:layout_margin="5dp"
         android:gravity="center"
@@ -21,6 +21,7 @@
             android:layout_gravity="center"
             android:gravity="center"
             android:text="interest"
+            android:textColor="@drawable/grid_selected_text"
             android:padding="5dp"
             android:id="@+id/interest_name"
             />
