--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,6 @@
 <resources>
     <dimen name="veryTinyFont">11.0sp</dimen>
     <dimen name="activity_large_margin">30.0sp</dimen>
+    <dimen name="smallFont">14.0sp</dimen>
+
 </resources>
