--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -31,11 +31,20 @@
         <item name="android:textColorPrimary">#ffffff</item>
     </style>
 
+    <style name="fp_editText">
+
+        <item name="android:textColor">@color/black</item>
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:maxLines">1</item>
+    </style>
+
+
 
     <style name="DialogAnimation">
         <item name="android:windowEnterAnimation">@anim/dialog_terms_cond</item>
         <item name="android:windowExitAnimation">@anim/dialog_terms_cond_slide_out</item>
     </style>
-    
+
 
 </resources>
