--- a/app/src/main/res/layout/popup_terms_condition.xml
+++ b/app/src/main/res/layout/popup_terms_condition.xml
@@ -1,52 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView android:layout_width="350dp"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="15dp"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+
 
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical"
         android:id="@+id/termsandcondlinearlayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/theme_combo"
+        android:layout_height="wrap_content"
+        android:padding="15dp"
+        android:background="@color/white"
         android:layout_gravity="center">
 
-        <TextView
-            android:id="@+id/popupclose_terms_condition_close"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:textColor="@color/white"
-            android:text="X"
-            android:textStyle="bold"
-            android:layout_gravity="end"
-            android:gravity="center" />
 
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:textColor="@color/white"
-            android:paddingLeft="20dp"
-            android:paddingRight="10dp"
-            android:textStyle="bold"
-            android:text="Goal Terms &amp; Conditions"
-            android:textSize="25sp"
-            android:layout_height="wrap_content" />
+            android:orientation="horizontal"
+            android:layout_height="wrap_content">
+
+
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:text="Goal Terms &amp; Conditions"
+                android:textSize="24sp"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/popupclose_terms_condition_close"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:textColor="@color/white"
+                android:text="X"
+                android:background="@drawable/circular_txt_view"
+                android:textStyle="bold"
+                android:layout_gravity="end"
+                android:gravity="center" />
+
+        </LinearLayout>
+
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/terms_condition_txt"
-            android:layout_marginLeft="10dp"
-            android:padding="10dp"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            android:text="*These terms and conditions should be followed in order to achieve the awards  "
+            android:paddingTop="15dp"
+            android:layout_marginRight="20dp"
+            android:textSize="15sp"
             />
 
 
 
     </LinearLayout>
 
-</android.support.v7.widget.CardView>
+
