--- a/app/src/main/res/layout/activity_setting_screen.xml
+++ b/app/src/main/res/layout/activity_setting_screen.xml
@@ -187,7 +187,7 @@
                     android:layout_weight="1"
                     android:gravity="center"
                     android:orientation="vertical"
-                    android:id="@+id/withdraw_value"
+                    android:id="@+id/withdraw_ll_btn"
                     android:layout_height="match_parent">
 
                     <ImageView
@@ -214,7 +214,7 @@
                     android:layout_width="0dp"
                     android:gravity="center"
                     android:layout_weight="1"
-                    android:id="@+id/records_value"
+                    android:id="@+id/balance_ll_btn"
                     android:orientation="vertical"
                     android:layout_height="match_parent">
 
@@ -240,7 +240,7 @@
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:id="@+id/income_value"
+                    android:id="@+id/income_ll_btn"
                     android:orientation="vertical"
                     android:layout_height="match_parent">
 
