--- a/app/src/main/res/layout/activity_content_image_detail_screen.xml
+++ b/app/src/main/res/layout/activity_content_image_detail_screen.xml
@@ -59,6 +59,17 @@
                         android:textStyle="bold"
                         android:layout_gravity="center"/>
 
+                    <tv.merabihar.app.merabihar.CustomFonts.TextViewSFProDisplayRegular
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:id="@+id/read_time"
+
+                        android:textColor="@color/txt_color"
+                        android:textSize="12sp" />
+
+
+
 
                 </LinearLayout>
 
@@ -106,7 +117,208 @@
 
             </FrameLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:padding="10dp"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:orientation="horizontal">
 
+                <LinearLayout
+
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+
+                    >
+
+                    <ImageView
+                        android:id="@+id/whatsapp_share"
+                        android:layout_width="50px"
+                        android:layout_height="50px"
+                        android:layout_gravity="center"
+                        android:src="@drawable/whatsapp_icons"
+                        android:scaleType="centerCrop"
+
+                        />
+
+
+                </LinearLayout>
+
+                <LinearLayout
+
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+
+                    android:layout_weight="1"
+
+                    android:orientation="vertical"
+
+                    >
+
+                    <ImageView
+                        android:id="@+id/likes_image"
+                        android:layout_width="50px"
+                        android:layout_height="50px"
+                        android:layout_gravity="center"
+                        android:src="@drawable/non_like"
+                        android:scaleType="centerCrop"
+
+                        />
+
+                    <tv.merabihar.app.merabihar.CustomFonts.MyTextView_Lato_Regular
+                        android:id="@+id/likes_count"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="0"
+                        android:gravity="center"
+                        android:drawablePadding="2dp"
+                        android:textColor="@color/black"
+                        android:textSize="12dp"
+                        android:layout_gravity="center"
+                        />
+
+                    <tv.merabihar.app.merabihar.CustomFonts.MyTextView_Lato_Regular
+                        android:id="@+id/like_id"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:visibility="gone"
+                        android:gravity="center"
+                        android:drawablePadding="2dp"
+                        android:textColor="@color/black"
+                        android:textSize="12dp"
+                        android:layout_gravity="center"
+                        />
+                </LinearLayout>
+
+                <LinearLayout
+
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+
+                    android:layout_weight="1"
+
+                    android:orientation="vertical"
+
+                    >
+
+                    <ImageView
+                        android:id="@+id/unlikes_image"
+                        android:layout_width="40px"
+                        android:layout_height="40px"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="2dp"
+                        android:src="@drawable/unlike_icons"
+                        android:scaleType="centerCrop"
+
+                        />
+
+                    <tv.merabihar.app.merabihar.CustomFonts.MyTextView_Lato_Regular
+                        android:id="@+id/unlikes_count"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="0"
+                        android:gravity="center"
+                        android:drawablePadding="2dp"
+
+                        android:textColor="@color/black"
+                        android:textSize="12dp"
+                        android:layout_gravity="center"
+                        />
+                    <tv.merabihar.app.merabihar.CustomFonts.MyTextView_Lato_Regular
+                        android:id="@+id/dislike_id"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:visibility="gone"
+                        android:gravity="center"
+                        android:drawablePadding="2dp"
+                        android:textColor="@color/black"
+                        android:textSize="12dp"
+                        android:layout_gravity="center"
+                        />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+
+                    >
+
+                    <ImageView
+                        android:id="@+id/comments_image"
+                        android:layout_width="50px"
+                        android:layout_height="50px"
+                        android:layout_gravity="center"
+                        android:src="@drawable/comments_iconed"
+                        android:scaleType="centerCrop"
+
+                        />
+
+                    <tv.merabihar.app.merabihar.CustomFonts.MyTextView_Lato_Regular
+                        android:id="@+id/comments_count"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="0"
+                        android:gravity="center"
+                        android:drawablePadding="2dp"
+                        android:textColor="@color/black"
+                        android:textSize="12dp"
+                        android:layout_gravity="center"
+                        />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+
+                    >
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+
+                    >
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+
+                    >
+
+                    <ImageView
+                        android:id="@+id/share_image"
+                        android:layout_width="50px"
+                        android:layout_height="50px"
+                        android:layout_gravity="center"
+                        android:src="@drawable/share_icons"
+                        android:scaleType="centerCrop"
+
+                        />
+
+
+                </LinearLayout>
+
+
+            </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -127,7 +339,7 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/content_title"
                     android:text=""
-                    android:textSize="18sp"
+                    android:textSize="22sp"
                     android:textColor="@color/txt_color"
                     android:layout_marginTop="3dp"/>
 
@@ -137,6 +349,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:padding="2dp"
+                    android:visibility="gone"
                     android:orientation="horizontal">
 
                     <ImageView
@@ -146,14 +359,7 @@
                         app:srcCompat="@drawable/ic_clock1"/>
 
 
-                    <tv.merabihar.app.merabihar.CustomFonts.TextViewSFProDisplayRegular
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
-                        android:id="@+id/read_time"
-                        android:text=""
-                        android:textColor="@color/txt_color"
-                        android:textSize="12sp" />
+
                 </LinearLayout>
 
 
@@ -172,7 +378,7 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/content_desc"
                     android:textColor="@color/txt_color"
-                    android:textSize="14sp"
+                    android:textSize="18sp"
                     android:layout_marginTop="10dp"
                     android:layout_marginRight="15dp"
                     android:lineSpacingExtra="5dp"/>
@@ -182,6 +388,45 @@
 
 
             </LinearLayout>
+
+            <tv.merabihar.app.merabihar.CustomFonts.TextViewSFProDisplayRegular
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:textStyle="bold"
+                android:text="Public Comments"
+                android:textColor="@color/txt_color"
+                android:textSize="20sp" />
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_above="@+id/message_lay"
+                >
+
+                <android.support.v7.widget.RecyclerView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/comments_list"
+                    android:scrollbars="none"
+
+                    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+                    />
+
+                <tv.merabihar.app.merabihar.CustomFonts.TextViewSFProDisplayRegular
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:visibility="gone"
+                    android:layout_gravity="center"
+                    android:id="@+id/no_comments"
+                    android:text="No Comments"
+                    android:textColor="@color/black"
+                    android:textSize="24sp" />
+
+
+            </FrameLayout>
+
 
 
 
