--- a/app/src/main/res/layout/activity_invite_friends_screen.xml
+++ b/app/src/main/res/layout/activity_invite_friends_screen.xml
@@ -17,8 +17,9 @@
 
         <ImageView
             android:id="@+id/invite_earn"
-            android:layout_width="match_parent"
+            android:layout_width="150dp"
             android:layout_height="150dp"
+            android:layout_centerHorizontal="true"
             android:layout_gravity="center"
             android:layout_marginTop="100dp"
             android:scaleType="centerCrop"
