--- a/app/src/main/res/layout/activity_tab_story.xml
+++ b/app/src/main/res/layout/activity_tab_story.xml
@@ -37,6 +37,7 @@
              <LinearLayout
                  android:layout_width="0dp"
                  android:layout_weight="1"
+                 android:id="@+id/gallery_post"
                  android:orientation="vertical"
                  android:layout_marginLeft="15dp"
                  android:layout_height="match_parent">
@@ -61,7 +62,7 @@
              <LinearLayout
                  android:layout_width="0dp"
                  android:layout_weight="1"
-                 android:id="@+id/ll_share_youtube"
+                 android:id="@+id/youtube_url"
                  android:orientation="vertical"
                  android:gravity="right"
                  android:layout_marginRight="15dp"
