--- a/app/src/main/res/layout/activity_tab_video_new_design.xml
+++ b/app/src/main/res/layout/activity_tab_video_new_design.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:focusable="true"
+        android:descendantFocusability="blocksDescendants"
         android:focusableInTouchMode="true"
         android:orientation="vertical">
 
