--- a/app/src/main/res/layout/earn_money_popup.xml
+++ b/app/src/main/res/layout/earn_money_popup.xml
@@ -1,61 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="10dp"
-    android:background="@drawable/login_ract"
-    android:layout_gravity="center">
-
-    <android.support.v7.widget.CardView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        app:cardElevation="4dp"
-        app:cardCornerRadius="0dp"
+
         xmlns:android="http://schemas.android.com/apk/res/android">
 
         <LinearLayout
-             android:background="@color/colorPrimaryDark"
-            android:layout_width="match_parent"
-            android:orientation="vertical"
-            android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/signin_popupclose_txt"
-                android:layout_width="35dp"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:textColor="@color/white"
-                android:text="X"
-                android:textSize="24dp"
-                android:textStyle="bold"
-                android:layout_gravity="end"
-                android:gravity="center" />
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:layout_gravity="center"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/close"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center"
+                android:background="@android:color/transparent"
+                android:scaleType="fitXY"
+                android:src="@drawable/delete_button" />
+
+
 
             <ImageView
                 android:id="@+id/signin_popup_image"
-                android:src="@drawable/invite_earn"
-                android:layout_width="match_parent"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_gravity="center"
+                android:background="@android:color/transparent"
                 android:scaleType="fitXY"
-                android:layout_height="0dp"
-                android:layout_weight="4"/>
+                android:src="@drawable/invite_earn" />
 
             <LinearLayout
-                android:gravity="center"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1.5">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:paddingBottom="5dp">
 
                 <Button
                     android:id="@+id/signin_popup_showContent_btn"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:background="@drawable/mediatransperent_ract"
+                    android:layout_margin="5dp"
+                    android:background="@drawable/signup_ract"
                     android:text="Show Content"
-                    android:layout_marginRight="15dp"
                     android:textColor="@color/white" />
 
                 <Button
@@ -63,14 +60,14 @@
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:background="@drawable/mediatransperent_ract"
+                    android:background="@drawable/signup_ract"
                     android:text="Earn"
                     android:textColor="@color/white" />
             </LinearLayout>
         </LinearLayout>
-    </android.support.v7.widget.CardView>
+    </LinearLayout>
 
-</LinearLayout>
+
 
 
 
