--- a/app/src/main/res/layout/activity_tab_story.xml
+++ b/app/src/main/res/layout/activity_tab_story.xml
@@ -38,23 +38,24 @@
                  android:layout_width="0dp"
                  android:layout_weight="1"
                  android:id="@+id/gallery_post"
+                 android:layout_marginRight="20dp"
                  android:orientation="vertical"
-                 android:layout_marginLeft="15dp"
                  android:layout_height="match_parent">
 
                  <ImageView
                      android:id="@+id/share_using_gallary"
                      android:layout_width="60dp"
+                     android:layout_gravity="center"
                      android:src="@drawable/gallery"
                      android:layout_height="60dp"/>
 
                  <TextView
-                     android:paddingTop="5px"
+                     android:paddingTop="8sp"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
-                     android:text="  Gallery"
-
-                     />
+                     android:textAlignment="center"
+                     android:textSize="12sp"
+                     android:text="Upload pictures from Gallery" />
 
              </LinearLayout>
 
@@ -65,7 +66,6 @@
                  android:id="@+id/youtube_url"
                  android:orientation="vertical"
                  android:gravity="right"
-                 android:layout_marginRight="15dp"
                  android:layout_height="match_parent">
 
 
@@ -73,13 +73,16 @@
                      android:id="@+id/share_using_youtube"
                      android:layout_width="60dp"
                      android:src="@drawable/youtube"
+                     android:layout_gravity="center"
                      android:layout_height="60dp" />
 
                  <TextView
                      android:layout_width="wrap_content"
-                     android:paddingTop="5px"
+                     android:paddingTop="8sp"
+                     android:textSize="12sp"
                      android:layout_height="wrap_content"
-                     android:text="Youtube "
+                     android:textAlignment="center"
+                     android:text="Upload videos from Youtube"
 
                      />
 
