--- a/app/src/main/res/layout/adapter_interest_trending.xml
+++ b/app/src/main/res/layout/adapter_interest_trending.xml
@@ -4,14 +4,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:id="@+id/collection_lay"
-    android:layout_width="150dp"
+    android:layout_width="100dp"
     android:layout_margin="5dp"
-    android:layout_height="200dp">
+    android:layout_height="130dp">
+
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:cardElevation="5dp"
         app:cardCornerRadius="5dp">
+
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -31,6 +33,7 @@
                 android:background="@color/transparentBlack"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -44,7 +47,7 @@
                     android:layout_height="wrap_content"
                     android:text=""
                     android:gravity="center"
-                    android:textSize="20dp"
+                    android:textSize="15sp"
                     android:textStyle="bold"
                     android:textColor="@color/white"
                     android:lineSpacingExtra="3dp"
