--- a/app/src/main/res/layout/activity_demo_design_test_screen.xml
+++ b/app/src/main/res/layout/activity_demo_design_test_screen.xml
@@ -24,125 +24,17 @@
             android:orientation="vertical"
             >
 
-            <LinearLayout
-
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="10dp"
-                android:orientation="horizontal">
-
-                <com.alexzh.circleimageview.CircleImageView
-                    android:id="@+id/banar1"
-                    android:layout_width="100px"
-                    android:layout_height="100px"
-                    android:src="@mipmap/ic_launcher"
-                    android:scaleType="centerCrop"
-                    android:gravity="fill"
-                    app:view_borderWidth="1dp"
-                    app:view_borderColor="#cccccc" />
-
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-
-                    <tv.merabihar.app.merabihar.CustomFonts.MyTextView_Lato_Regular
-                        android:id="@+id/newsname"
-                        android:layout_marginLeft="10dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Mohammed Nishar"
-                        android:textColor="@color/black"
-                        android:textSize="16dp"
-                        android:textStyle="bold"
-                        android:layout_gravity="center"/>
-
-                    <tv.merabihar.app.merabihar.CustomFonts.MyTextView_Lato_Regular
-                        android:id="@+id/time"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="5dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="2 days ago"
-                        android:drawablePadding="2dp"
-                        android:drawableLeft="@drawable/ic_clock1"
-                        android:textColor="@color/listsub1"
-                        android:textSize="14dp"
-                        android:layout_gravity="center"
-                        />
-                </LinearLayout>
+          <VideoView
+              android:layout_width="match_parent"
+              android:layout_height="250dp"
+              android:id="@+id/videoView"/>
 
 
 
 
-                <tv.merabihar.app.merabihar.CustomFonts.MyTextView_Lato_Regular
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="16sp"
-                    android:text="Follow"
-                    android:textColor="#dd3e3e"/>
-
-            </LinearLayout>
-
-
-            <com.makeramen.roundedimageview.RoundedImageView
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/imageView1"
-                android:layout_width="match_parent"
-                android:layout_marginTop="5dp"
-                android:layout_height="250dp"
-                android:src="@drawable/water_sports"
-                android:scaleType="centerCrop"
-                app:riv_corner_radius="3dip"
-                app:riv_oval="false" />
 
 
 
-            <LinearLayout
-                android:layout_marginTop="12dp"
-                android:layout_width="match_parent"
-                android:layout_margin="10dp"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <LinearLayout
-                    android:layout_weight="1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_marginRight="5dp"
-                    >
-
-                    <tv.merabihar.app.merabihar.CustomFonts.MyTextView_Lato_Regular
-                        android:id="@+id/news"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Water Sports in Bihar"
-                        android:textSize="20dp"
-                        android:textColor="@color/black"
-                        android:lineSpacingExtra="3dp"
-                        />
-
-                    <tv.merabihar.app.merabihar.CustomFonts.MyTextView_Lato_Regular
-                        android:id="@+id/newssub"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Bihar management has taken projects within the latest past to make the state extra adventure sports pleasant. The authorities consequently introduced its dream mission of “Adventure Water Sports Facility” at Ganga River to pave the manner for the introduction of various types of watersports in the famend river. "
-                        android:layout_marginTop="13dp"
-                        android:lines="3"
-                        android:maxLines="3"
-                        android:textSize="16dp"
-                        android:textColor="@color/listsub1"
-                        android:lineSpacingExtra="3dp"
-                        />
-
-                </LinearLayout>
-
-            </LinearLayout>
         </LinearLayout>
 
 
