--- a/app/src/main/res/layout/activity_tab_account.xml
+++ b/app/src/main/res/layout/activity_tab_account.xml
@@ -5,13 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/bihar_nature"
+
     android:orientation="vertical">
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/texture">
+        >
 
         <ProgressBar
             android:layout_width="80dp"
@@ -38,9 +38,9 @@
                     android:layout_weight="1">
                     <ImageView
 
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:background="@drawable/ic_tool2"
+                        android:layout_width="36dp"
+                        android:layout_height="36dp"
+                        android:background="@drawable/settings_icon"
                         android:id="@+id/settings"
                         android:layout_gravity="center"
                         />
@@ -75,9 +75,9 @@
                     android:gravity="center">
 
                     <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/ic_sign2"
+                        android:layout_width="36dp"
+                        android:layout_height="36dp"
+                        android:background="@drawable/follow_add"
                         android:id="@+id/follow_peopls"
                         android:layout_gravity="center" />
 
@@ -96,7 +96,7 @@
                     android:id="@+id/profile_name"
                     android:text=""
                     android:textSize="18dp"
-                    android:textColor="#fff"
+                    android:textColor="#000"
                     android:textAlignment="center"
                     android:layout_marginTop="20dp"/>
 
@@ -107,7 +107,7 @@
                     android:id="@+id/profile_about"
                     android:text=""
                     android:textSize="14dp"
-                    android:textColor="#fff"
+                    android:textColor="#000"
                     android:textAlignment="center"
                     android:layout_marginTop="10dp"/>
 
@@ -173,14 +173,14 @@
                         android:text="0"
                         android:id="@+id/tvFollowers"
                         android:textSize="24dp"
-                        android:textColor="#FFF"
+                        android:textColor="#000"
                         android:layout_gravity="center"/>
                     <tv.merabihar.app.merabihar.CustomFonts.MyTextView_Roboto_Regular
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:letterSpacing="0.1"
                         android:text="Followers"
-                        android:textColor="#FFF"
+                        android:textColor="#000"
                         android:layout_gravity="center"/>
 
                     <ImageView
@@ -215,14 +215,14 @@
                         android:text="0"
                         android:id="@+id/tvFollowing"
                         android:textSize="24dp"
-                        android:textColor="#FFF"
+                        android:textColor="#000"
                         android:layout_gravity="center"/>
                     <tv.merabihar.app.merabihar.CustomFonts.MyTextView_Roboto_Regular
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:letterSpacing="0.1"
                         android:text="Following"
-                        android:textColor="#FFf"
+                        android:textColor="#000"
                         android:layout_gravity="center"/>
 
                     <ImageView
@@ -240,15 +240,7 @@
 
             </LinearLayout>
 
-            <android.support.v7.widget.RecyclerView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/follow_profiles"
-                android:scrollbars="none"
-                android:layout_margin="5dp"
 
-                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-                />
 
             <LinearLayout
 
@@ -270,7 +262,7 @@
                     android:text="No Stories"
                     android:visibility="gone"
                     android:textSize="18dp"
-                    android:textColor="#fff"
+                    android:textColor="#000"
                     android:textAlignment="center"
                     android:layout_marginTop="20dp"/>
 
@@ -282,14 +274,39 @@
 
                 </ListView>-->
 
-                <android.support.v7.widget.RecyclerView
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:id="@+id/listviews"
-                    android:layout_marginStart="2dp"
-                    android:clipToPadding="false"
-                    android:paddingTop="2dp"
-                    android:nestedScrollingEnabled="false"/>
+                    android:orientation="vertical"
+                    android:background="@color/apptool"
+                    android:layout_marginBottom="60dp"
+                    android:layout_marginTop="13dp">
+
+                    <include layout="@layout/middle_bar"/>
+
+                    <!--Recycler can be used-->
+
+                    <android.support.v7.widget.RecyclerView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:id="@+id/listviews"
+                        android:layout_marginStart="2dp"
+                        android:clipToPadding="false"
+                        android:paddingTop="2dp"
+                        android:nestedScrollingEnabled="false"/>
+
+                    <android.support.v7.widget.RecyclerView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/follow_profiles"
+                        android:scrollbars="none"
+                        android:layout_margin="5dp"
+                        android:visibility="gone"
+                        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+                        />
+
+                </LinearLayout>
+
 
 
 
