--- a/app/src/main/res/layout/activity_tab_search2.xml
+++ b/app/src/main/res/layout/activity_tab_search2.xml
@@ -1,4 +1,4 @@
-<ScrollView
+<android.support.v4.widget.NestedScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -105,7 +105,7 @@
 
 
     </LinearLayout>
-</ScrollView>
+</android.support.v4.widget.NestedScrollView>
 
 
 
