--- a/app/src/main/res/layout/activity_tab_video_new_design.xml
+++ b/app/src/main/res/layout/activity_tab_video_new_design.xml
@@ -66,6 +66,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:visibility="gone"
             android:id="@+id/category_layout"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
