--- a/app/src/main/res/layout/fragment_follow_fragments.xml
+++ b/app/src/main/res/layout/fragment_follow_fragments.xml
@@ -1,7 +1,13 @@
-<LinearLayout android:layout_width="match_parent"
+<android.support.v4.widget.NestedScrollView
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
@@ -15,4 +21,6 @@
         android:layout_height="wrap_content"
         android:id="@+id/follow_frag_content_recycler_view"/>
 
-</LinearLayout>
+    </LinearLayout>
+
+</android.support.v4.widget.NestedScrollView>
