--- a/app/src/main/res/layout/gallery_layout.xml
+++ b/app/src/main/res/layout/gallery_layout.xml
@@ -13,7 +13,7 @@
             android:layout_height="200dp"
             android:id="@+id/blog_images"
             android:background="@drawable/no_image"
-            android:scaleType="centerCrop"/>
+            android:scaleType="fitXY"/>
 
 
 
