--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
     <color name="txt_color">#1f2833</color>
+    <color name="apptool">#e8eff5</color>
 
     <color name="text_grey">#424D58</color>
     <color name="grey_charcoal">#ff39444f</color>
